--- a/WebApp/Views/Shared/_LayoutPage.cshtml
+++ b/WebApp/Views/Shared/_LayoutPage.cshtml
@@ -99,7 +99,7 @@
                                         <li>@Html.ActionLink("Create State", "../States_Admin/Create")</li>
                                         <li>@Html.ActionLink("Create System", "../Systems_Admin/Create")</li>
                                         <li>@Html.ActionLink("Create SystemItem", "../SystemItem_Admin/Create")</li>
-                                        <li>@Html.ActionLink("Create Role", "../Role_Admin/Create")</li>
+                                        @*<li>@Html.ActionLink("Create Role", "../Role_Admin/Create")</li>*@
                                         <li>@Html.ActionLink("Create ZipCode", "../ZipCode_Admin/Create")</li>
                                       
 
