--- a/WebApp/Views/Allergy_Admin/Create.cshtml
+++ b/WebApp/Views/Allergy_Admin/Create.cshtml
@@ -171,7 +171,7 @@
                                                 <li>
                                                     <input name="id" type="number" style="display:none" value="@item.allergyID"></li>
                                                 <li>
-                                                    <button id="delete" type="submit" onclick="return confirm('Are you sure you want to delete this item?');">Delete</button></li>
+                                                    <button class="btn btn-link submit" id="delete" type="submit" onclick="return confirm('Are you sure you want to delete this item?');">Delete</button></li>
                                             </ul>
                                         </div>
                                     }
