--- a/WebApp/Views/Consultation_Admin/AppReport.cshtml
+++ b/WebApp/Views/Consultation_Admin/AppReport.cshtml
@@ -45,9 +45,9 @@
                                 <select id="csltCriteria" name="sltCriteria" class="form-control" required="required">
                                     <option value="">Choose Criteria</option>
                                     <option value="1">ALL</option>
-                                    <option value="2">Approved</option>
-                                    <option value="3">Rescheduled</option>
-                                    <option value="4">Cancelled</option>
+                                    @*<option value="2">Approved</option>*@
+                                    <option value="2">Rescheduled</option>
+                                    <option value="3">Completed</option>
                                 </select>
                             </div>
                         </div>
@@ -80,7 +80,7 @@
                 <table id="datatable-responsive" class="table table-striped table-bordered dt-responsive nowrap" cellspacing="0" width="100%">
                     <thead>
                         <tr>
-                            <th>ID</th>
+                            @*<th>ID</th>*@
                             <th>Doctor</th>
                             <th>Patient</th>
                             <th>App. Date</th>
@@ -102,19 +102,16 @@
 
                                  
                             <tr>
-                                <td>@item.appID</td>
+                                @*<td>@item.appID</td>*@
                                 <td class="DName" style="word-break: break-all; width: 300px">@item.DName</td>
                                 <td class="PName" style="word-break: break-all; width: 300px">@item.PName</td>
                                 <td class="appDate" style="width: 150px">@item.appDate</td>
                                 <td class="appTime" style="width: 150px">@item.appTime</td>
-                                @if (item.consultationStatus == "A")
-                                {<td class="consultationStatus" style="width: 100px">Approved</td>}
-                                @if (item.consultationStatus == "P")
-                                {<td class="consultationStatus" style="width: 100px">Pending</td>}
+                                
                                 @if (item.consultationStatus == "R")
-                                {<td class="consultationStatus" style="width: 100px">Reschedule</td>}
+                                {<td class="consultationStatus" style="width: 100px">Rescheduled</td>}
                                 @if (item.consultationStatus == "C")
-                                {<td class="consultationStatus" style="width: 100px">Cancelled</td>}
+                                {<td class="consultationStatus" style="width: 100px">Completed</td>}
                                 <td class="cd" style="width: 150px">@item.cd</td>
 
 
@@ -215,56 +212,26 @@
         }
     };
 
-    TableManageButtons = function () {
-        "use strict";
-        return {
-            init: function () {
-                handleDataTableButtons();
-            }
-        };
-    }();
+    
+    
 
-    $('#datatable').dataTable();
+   
+    $('#datatable-responsive').DataTable();
+    //$('#datatable-responsive').DataTable(
+    //    {
+    //        'order': [[0, 'desc']],
+    //        'columnDefs': [
+    //      { visible: false, targets: [0] }
+    //        ]
+    //    });
 
-    $('#datatable-keytable').DataTable({
-        keys: true
-    });
+    
 
-    $('#datatable-responsive').DataTable(
-        {
-            'order': [[0, 'desc']],
-            'columnDefs': [
-          { visible: false, targets: [0] }
-            ]
-        });
+   
 
-    $('#datatable-scroller').DataTable({
-        ajax: "js/datatables/json/scroller-demo.json",
-        deferRender: true,
-        scrollY: 380,
-        scrollCollapse: true,
-        scroller: true
-    });
-
-    $('#datatable-fixed-header').DataTable({
-        fixedHeader: true
-    });
-
-    var $datatable = $('#datatable-checkbox');
-
-    $datatable.dataTable({
-        'order': [[1, 'asc']],
-        'columnDefs': [
-          { orderable: false, targets: [0] }
-        ]
-    });
-    $datatable.on('draw.dt', function () {
-        $('input').iCheck({
-            checkboxClass: 'icheckbox_flat-green'
-        });
-    });
-
-    TableManageButtons.init();
+   
+   
+    
     //<!-- /Datatables -->
     // initialize the validator function
     //validator.message.date = 'not a real date';
