--- a/WebApp/Views/Consultation_Admin/ConsultationReport.cshtml
+++ b/WebApp/Views/Consultation_Admin/ConsultationReport.cshtml
@@ -94,10 +94,10 @@
                                     <td class="appTime" style="word-break: break-all; width: 300px">@item.duration</td>
                                     
                                         
-                                            @if(item.consultationStatus=="A"){<td class="consultationStatus">Approved</td>}
-                                            @if (item.consultationStatus == "P"){<td class="consultationStatus">Pending</td>}
-                                            @if(item.consultationStatus=="R"){<td class="consultationStatus">Reschedule</td>}
-                                            @if(item.consultationStatus=="C"){<td class="consultationStatus">Cancelled</td>}
+                                            @if(item.consultationStatus==null){<td class="consultationStatus">Not Completed</td>}
+                                            @*@if (item.consultationStatus == "P"){<td class="consultationStatus">Pending</td>}
+                                            @if(item.consultationStatus=="R"){<td class="consultationStatus">Reschedule</td>}*@
+                                            @if(item.consultationStatus=="C"){<td class="consultationStatus">Completed</td>}
                                         
 
                                    
