--- a/WebApp/Views/Languages_Admin/Create.cshtml
+++ b/WebApp/Views/Languages_Admin/Create.cshtml
@@ -167,7 +167,7 @@
                                                     <a class="editbtn">Edit</a>
                                                 </li>
                                                <li> <input name="id" type="number" style="display:none" value="@item.languageID"></li>
-                                               <li> <button id="delete" type="submit" onclick="return confirm('Are you sure you want to delete this item?');">Delete</button></li>
+                                               <li> <button class="btn btn-link submit" id="delete" type="submit" onclick="return confirm('Are you sure you want to delete this item?');">Delete</button></li>
                                             </ul>
                                         </div>
                                           }
