--- a/WebApp/Views/News_Admin/Create.cshtml
+++ b/WebApp/Views/News_Admin/Create.cshtml
@@ -266,7 +266,7 @@
                                                 <li>
                                                     <input name="newsid" type="number" style="display:none" value="@item.newsID"></li>
                                                 <li>
-                                                    <button id="delete" type="submit" onclick="return confirm('Are you sure you want to delete this item?');">Delete</button></li>
+                                                    <button class="btn btn-link submit" id="delete" type="submit" onclick="return confirm('Are you sure you want to delete this item?');">Delete</button></li>
                                             </ul>
                                         </div>
                                     }
