--- a/WebApp/Views/SystemItem_Admin/Create.cshtml
+++ b/WebApp/Views/SystemItem_Admin/Create.cshtml
@@ -217,7 +217,7 @@
                                                         <input name="id" type="number" style="display:none" value="@item.systemItemID">
                                                     </li>
                                                     <li>
-                                                        <button id="delete" type="submit" onclick="return confirm('Are you sure you want to delete this item?');">Delete</button>
+                                                        <button class="btn btn-link submit" id="delete" type="submit" onclick="return confirm('Are you sure you want to delete this item?');">Delete</button>
                                                     </li>
                                                 </ul>
                                             </div>
